--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "web-server",
+  "engines": {
+    "node":"17.8.0",
+    "npm":"8.5.5"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
